third_party/WebKit/WebKit/WebView/WebHTMLViewInternal.h
@@ -88,7 +88,8 @@ struct WebHTMLViewInterpretKeyEventsParameters;
     BOOL transparentBackground;
 
     WebHTMLViewInterpretKeyEventsParameters *interpretKeyEventsParameters;
-
+    BOOL receivedNOOP;
+    
     NSTextView *firstResponderTextViewAtMouseDownTime;
     
     WebDataSource *dataSource;
